# studio_scan_and_plan

./: .gitignore  .pre-commit-config.yaml  README.md
src/apriltag_ros_python/: setup.py
src/apriltag_ros_python/launch/: apriltag_detection_client.launch.py  apriltag_detection_server.launch.py
src/transform_print_pose/: CMakeLists.txt  behavior_plugin.yaml  package.xml  transform_print_pose_plugin_description.xml
src/ur10e_gazebo_scan_and_plan_config/: CMakeLists.txt  README.md  package.xml
src/ur10e_scan_config/: CMakeLists.txt  package.xml
src/ur10e_scan_config/config/: cameras.yaml  config.yaml  initial_positions.yaml  udev.txt
src/ur10e_scan_config/config/control/: ur10e.ros2_control.yaml
src/ur10e_scan_config/config/moveit/: joint_limits.yaml  ompl_planning.yaml  pick_ik_kinematics.yaml  pilz_cartesian_limits.yaml  trac_ik_kinematics.yaml  ur10e_scan.srdf  ur10e_servo.yaml
src/ur10e_scan_config/description/: ur10e_scan.xacro
src/ur10e_scan_config/description/meshes/: sanding_panel.stl  weld_table.stl
src/ur10e_scan_config/launch/: hardware.launch.py  robot_drivers_to_persist.launch.py  ur_tool_comms.launch.xml  view_robot.launch.py
src/ur10e_scan_config/launch/sim/: hardware_sim.launch.py  robot_drivers_to_persist_sim.launch.py  robot_drivers_to_restart_sim.launch.py
src/ur10e_scan_config/objectives/: object_inspection.xml  object_inspection_transform_print_test.xml  trajectory_around_foil.yaml
src/ur10e_scan_config/rviz/: view_robot.rviz
src/ur10e_scan_config/waypoints/: waypoints.yaml
(+11 files in other folders)
